# GPS-TS

./: README.md  pyproject.toml
src/gpsts/: atom_mapping.py  complexes.py  geodesic.py  quacc.py  utils.py
src/gpsts/benchmark/: benchmark.py  bh2o36.py  bh9.py  elyte_ts.py  mobh35.py  rost61.py  sella.py
test_files/: elyte_ts_pf6.json
test_files/graphs/: furan1_pro_1.xyz
test_files/mol_adj_matrix/: adj_matrix  initial_structure.xyz
test_files/test_geo_path/: path_point0_0_1.xyz  path_point10_0_1.xyz  path_point11_0_1.xyz  path_point12_0_1.xyz  path_point13_0_1.xyz  path_point14_0_1.xyz  path_point15_0_1.xyz  path_point16_0_1.xyz  path_point17_0_1.xyz  path_point18_0_1.xyz  path_point19_0_1.xyz  path_point1_0_1.xyz  path_point2_0_1.xyz  path_point3_0_1.xyz  path_point4_0_1.xyz  path_point5_0_1.xyz  path_point6_0_1.xyz  path_point7_0_1.xyz  path_point8_0_1.xyz  path_point9_0_1.xyz
test_files/test_rxn_1/: rxn1_product_-1_1.xyz  rxn1_reactant_-1_1.xyz
test_files/test_rxn_2/: rxn2_product_-1_2.xyz  rxn2_reactant1_0_1.xyz  rxn2_reactant2_-1_2.xyz  rxn2_reactant_-1_2.xyz
test_files/test_rxn_3/: rxn3_product1_0_1.xyz  rxn3_product2_0_1.xyz  rxn3_product_0_1.xyz  rxn3_reactant1_0_1.xyz  rxn3_reactant2_0_1.xyz  rxn3_reactant_0_1.xyz
test_files/test_rxn_4/: rxn4_product1_0_1.xyz  rxn4_product2_0_1.xyz  rxn4_product3_0_1.xyz  rxn4_product_0_1.xyz  rxn4_reactant_0_1.xyz
test_files/test_rxn_5/: rxn5_product1_-1_1.xyz  rxn5_product2_0_1.xyz  rxn5_reactant1_0_1.xyz  rxn5_reactant2_-1_1.xyz  rxn5_reactant3_0_1.xyz
tests/: conftest.py  test_atom_mapping.py  test_complexes.py  test_geodesic.py  test_utils.py
